--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -74,7 +74,7 @@
 .modal__content{
     display: grid;
     font-size: .875rem;
-    line-height: 21px;
+    line-height: 1.25rem;
     font-weight: 400;
     width: 100%;
     height: 100%;
