--- a/src/app/shared/atoms/challenge/challenge.component.css
+++ b/src/app/shared/atoms/challenge/challenge.component.css
@@ -39,7 +39,7 @@
     font-size: 1rem;
     line-height: 150%;
     text-align: center;
-    width: 110px;
+    width: 6.875rem;
 }
 
 .challenge__img{
