--- a/src/styles.css
+++ b/src/styles.css
@@ -103,12 +103,17 @@ sn-icon>i[class^=sn-]{
 .btn{
     align-self: center;
     background-color: var(--theme-color-primary-01);
+    box-shadow: 0px 10px 12px rgba(236, 0, 0, 0.12);
     border: none;
     border-radius: 3rem;
     color: var(--theme-color-text-01);
     font-weight: 700;
+    line-height: 1.5rem;
+    font-size: 1rem;
     cursor: pointer;
     padding: 0.75rem 1.5rem;
+    min-width: 9.5rem;
+    min-height: 3rem;
 }
 
 
