correcion al evaluar mision 7 al ya haber terminado el reto, correcion mostrar loader

--- a/src/app/shared/atoms/circle-progress/circle-progress.component.html
+++ b/src/app/shared/atoms/circle-progress/circle-progress.component.html
@@ -1,5 +1,5 @@
 <div class="progress">
-    
+
     <div class="progress__background">
         <div class="progress__circle"  >
             <svg viewBox="0, 0, 100, 100">
@@ -19,13 +19,13 @@
     </div>
 
     <div class="progress__description">
-        <span class="progress__icon">
+        <figure class="progress__icon">
             <img [src]="icon" alt="icon">
-        </span>
+        </figure>
         <span class="progress__text">{{percent | percent}}</span>
 
     </div>
 
-    
+
 </div>
 
