Fix gradient circle progress, fix negritas en modal tus objetivos, fix icon mision failed, fix animation load progress

--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -46,3 +46,6 @@
 .tab__icon--finish{
     background-image: url("../../../../assets/icons/Activa_tu_tarjeta.png");
 }
+.tab__icon--failed{
+    background-image: url("../../../../assets/icons/mission-failed.png");
+}
