--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -3,7 +3,7 @@
     <div class="challenge-likeu">
         <app-card-data
             [data]="cardDetail"
-            [percent]="getPercent()"
+            [percent]="percent"
             >
         </app-card-data>
 
