--- a/src/app/shared/atoms/circle-progress/circle-progress.component.html
+++ b/src/app/shared/atoms/circle-progress/circle-progress.component.html
@@ -14,7 +14,7 @@
                       <stop offset="100%" class="stop-color-two" />
                     </linearGradient>
                 </defs>
-                <circle class="circle circle--active" r="46" cx="50" cy="50" animation [loadProgress]="{circunference:this.circunference,progress:this.percent}"></circle>
+                <circle class="circle circle--active" r="46" cx="50" cy="50" lu-animation [loadProgress]="{circunference:this.circunference,progress:this.percent}"></circle>
             </svg>
         </div>
     </div>
