--- a/src/app/shared/atoms/error-dialog/error-dialog.component.html
+++ b/src/app/shared/atoms/error-dialog/error-dialog.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{
     'error-dialog':true
-    }" 
-    animation="downUp"
+    }"
+    lu-animation animation="downUp"
 >
     <img class="error-dialog__img" [src]="'../../../../assets/icons/'+errorData.icon+'.png'" alt="">
     <span class="error-dialog__title">{{errorData.title}}</span>
