--- a/src/app/shared/components/frequently-questions/frequently-questions.component.html
+++ b/src/app/shared/components/frequently-questions/frequently-questions.component.html
@@ -1,7 +1,7 @@
 <div class="frequently-questions">
     <h2>Preguntas Frecuentes</h2>
     <ng-container *ngFor="let question of questions">
-        <app-question [question]="question"></app-question>
+        <lu-question [question]="question"></lu-question>
     </ng-container>
 
 </div>
