--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -1,6 +1,6 @@
 
 <div class="first-page">
-    <app-header [circleBG]="false"></app-header>
+    <lu-header [circleBG]="false"></lu-header>
     <div class="first-page__header">
         <h2 class="first-page__title">Reto Like U</h2>
         <h4 class="first-page__subtitle">¡Santander confía en ti!</h4>
@@ -11,7 +11,7 @@
 
     <div class="first-page__time-line">
         <h3 class="first-page__objectives-title">Algunas de las misiones por cumplir son:</h3>
-        <sn-timeline></sn-timeline>
+        <lu-timeline></lu-timeline>
     </div>
 
     <p class="first-page__terms">*Consulta términos y condiciones completos en <span class="first-page__terms-link">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</span></p>
