--- a/src/app/shared/components/frequently-questions/frequently-questions.component.html
+++ b/src/app/shared/components/frequently-questions/frequently-questions.component.html
@@ -1,5 +1,5 @@
 <div class="frequently-questions">
-    <h2>Preguntas Frecuentes</h2>
+    <h2>Preguntas frecuentes</h2>
     <ng-container *ngFor="let question of questions">
         <lu-question [question]="question"></lu-question>
     </ng-container>
