--- a/src/app/shared/atoms/round-card/round-card.component.css
+++ b/src/app/shared/atoms/round-card/round-card.component.css
@@ -11,14 +11,16 @@
 }
 
 .round-card__principal-text {
+  font-family: "SantanderHeadline", sans-serif, Arial, Helvetica;
   font-size: 1rem;
   font-weight: 400;
+  letter-spacing: 0.05em;
   line-height: 150%;
 }
 
 .round-card__secondary-text {
-  font-weight: 400;
-  font-size: 0.625rem;
-  line-height: 150%;
   color: var(--theme-color-text-04);
+  font-size: 0.625rem;
+  font-weight: 400;
+  line-height: 150%;
 }
