--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,11 @@
   'header':true,
   'header__circle-bg':circleBG
 }">
-    <img class="heder__btn" src="../../../../assets/icons/chevron-left.png" alt="" (click)="close()">
+    <figure class="heder__btn">
+      <img  src="../../../../assets/icons/chevron-left.png" alt="" (click)="close()">
+    </figure>
     <h2>Reto LikeU</h2>
-    <img class="heder__btn" src="../../../../assets/icons/phone.png" alt="client_support" (click)="redirect()">
+    <figure class="heder__btn">
+      <img  src="../../../../assets/icons/phone.png" alt="client_support" (click)="redirect()">
+    </figure>
 </div>
