--- a/src/app/shared/atoms/timer/timer.component.html
+++ b/src/app/shared/atoms/timer/timer.component.html
@@ -1,3 +1,3 @@
 <div class="time-remaining">
-    <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">{{remainingDays}}</span></span>
+    <span class="time-remaining__text"> {{remaining}} <span class="time-remaining__days">{{remainingDays}}</span></span>
 </div>
