--- a/src/app/shared/atoms/error-dialog/error-dialog.component.css
+++ b/src/app/shared/atoms/error-dialog/error-dialog.component.css
@@ -1,31 +1,33 @@
-.error-dialog{
-    align-items: center;
-    background: var(--theme-color-background-03);
-    border-radius: 12px 12px 0px 0px;
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-    justify-content: center;
-    left: 0;
-    min-height: 24.75rem;
-    position: fixed;
-    right: 0;
-    text-align: center;
-    transition: all .3s ease;
-    width: 100%;
+.error-dialog {
+  align-items: center;
+  background: var(--theme-color-background-03);
+  border-radius: 12px 12px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  justify-content: center;
+  left: 0;
+  min-height: 24.75rem;
+  position: fixed;
+  right: 0;
+  text-align: center;
+  transition: all 0.3s ease;
+  width: 100%;
 }
 
-.error-dialog__img{
-    max-width: 7.125rem;
-    margin-bottom: 3rem;
+.error-dialog__img {
+  max-width: 7.125rem;
+  margin-bottom: 3.5rem;
 }
 
-.error-dialog__title{
-    font-size: 1.25rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
+.error-dialog__title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
 }
 
-.error-dialog__description{
-    margin: 0 3.5rem;
+.error-dialog__description {
+  font-size: 1rem;
+  max-width: 15rem;
+  margin: 0 auto;
 }
